--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -78,7 +78,7 @@ input, select, textarea {
 
 	/* Color Palette */
 	html {
-		-color-white: #ffffff;
+		-color-white: #eeeeee;
 		-color-white-alt: #dddddd;
 		-color-grey: #bbbbbb;
 		-color-blue-dark: #060626;
@@ -173,7 +173,7 @@ input, select, textarea {
 /* Type */
 
 	body, input, select, textarea {
-		color: rgba(255, 255, 255, 0.65);
+		color: rgba(255, 255, 255, 0.75);
 		font-family: Arial, Helvetica, sans-serif;
 		font-size: 16.5pt;
 		font-weight: normal;
@@ -1891,7 +1891,7 @@ input, select, textarea {
 		transition: border-color 0.2s ease;
 		background-color: transparent;
 		border: solid 1px !important;
-		border-color: rgba(255, 255, 255, 0.15) !important;
+		border-color: rgba(255, 255, 255, 0.45) !important;
 		border-radius: 3em;
 		color: -color-white !important;
 		cursor: pointer;
@@ -3837,7 +3837,7 @@ input, select, textarea {
 			-ms-transition: color 0.2s ease;
 			transition: color 0.2s ease;
 			border: 0;
-			color: rgba(255, 255, 255, 0.35);
+			color: rgba(255, 255, 255, 0.50);
 			display: block;
 			font-size: 0.6em;
 			font-weight: bold;
@@ -3877,7 +3877,7 @@ input, select, textarea {
 			}
 
 			#sidebar nav a:hover {
-				color: rgba(255, 255, 255, 0.55);
+				color: rgba(255, 255, 255, 0.75);
 			}
 
 			#sidebar nav a.active {
