--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2278,6 +2278,86 @@ input, select, textarea {
 
 		}
 
+/* Features2 */
+
+.features2 {
+	display: -moz-flex;
+	display: -webkit-flex;
+	display: -ms-flex;
+	display: flex;
+	-moz-flex-wrap: wrap;
+	-webkit-flex-wrap: wrap;
+	-ms-flex-wrap: wrap;
+	flex-wrap: wrap;
+	margin: 0 0 2em 0;
+}
+
+	.features2 article {
+		padding: 1.75em 1.75em 1.75em 1.75em ;
+		background-color: #060626;
+		border-radius: 5px;
+		margin: 1.5em 3em 1.5em 0;
+		width: calc(50% - 1.5em);
+	}
+
+		.features2 article:nth-child(2n) {
+			margin-right: 0;
+		}
+
+		.features2 article .image {
+			border-radius: 5px 5px 0 0;
+			display: block;
+			margin-bottom: 1.75em;
+			margin-left: -1.75em;
+			margin-top: -1.75em;
+			position: relative;
+			width: calc(100% + 3.5em);
+		}
+
+			.features2 article .image img {
+				border-radius: 5px 5px 0 0;
+				width: 100%;
+			}
+
+	@media screen and (max-width: 980px) {
+
+		.features2 article {
+			margin: 1em 2em 1em 0;
+			width: calc(50% - 1em);
+		}
+
+	}
+
+	@media screen and (max-width: 736px) {
+
+		.features2 article {
+			padding: 1.5em 1.5em 0.1em 1.5em ;
+			margin: 0.875em 1.75em 0.875em 0;
+			width: calc(50% - 0.875em - 1px);
+		}
+
+			.features2 article .image {
+				margin-bottom: 1.5em;
+				margin-left: -1.5em;
+				margin-top: -1.5em;
+				width: calc(100% + 3em);
+			}
+
+	}
+
+	@media screen and (max-width: 480px) {
+
+		.features2 {
+			display: block;
+		}
+
+			.features2 article {
+				width: 100%;
+				margin: 0 0 2em 0 !important;
+			}
+
+	}
+
 /* Form */
 
 	form {
